--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 .buildlog/
 .history
 .svn/
+.fvmrc
+.vscode/
 migrate_working_dir/
 
 # IntelliJ related
@@ -42,3 +44,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# FVM Version Cache
+.fvm/
