--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   meta: ^1.15.0
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
