--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   meta: ^1.15.0
-  workmanager: ^0.5.2
+  sqflite: ^2.4.0
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
